takauma/styles/index.module.css
.cover {
	display: flex;
	height: 87vh;
	align-items: center;
	flex-direction: column;
}
.apptitle {
	margin: 0;
	text-align: center;
	font-size: 4em;
	line-height: 100%;
	color: white;
	text-shadow: 1px 1px 1px rgb(0 0 0 / 20%);
	font-family: "Saira Condensed", sans-serif;
	text-transform: uppercase;
}
.appdesc {
	margin: 0;
	text-align: center;
	font-size: 1.1em;
	background: linear-gradient(
		90deg,
		rgb(110 255 208) 40%,
		rgb(221 255 36) 100%
	);
	-webkit-background-clip: text;
	background-clip: text;
	color: transparent;
	font-family: "Saira Condensed", sans-serif;
}
.coverimage {
	position: absolute;
	top: 0;
	left: 0;
	z-index: -1;
	height: 100vh;
	width: 100%;
	overflow-y: hidden;
	background-color: #2c3735;
}
.coverimage div {
	width: 100%;
}
.coverimage img {
	min-height: 100vh;
	min-width: 100%;
	object-fit: cover;
	transition: 0.7s;
}
.applogo {
	position: absolute;
	margin-left: -0.4rem;
	margin-top: -5rem;
	z-index: 1;
}
.applogo img {
	width: unset;
}
.frontcontent {
	font-family: "Saira Condensed", sans-serif;
	font-size: 1.1em;
	padding: 0.6rem 1rem;
	background-color: #fefff8;
}
.frontcontent article {
	margin-left: auto;
	margin-right: auto;
	max-width: 1024px;
}
.frontcontent h1,
.frontcontent h2 {
	font-size: 1.5em;
	margin: 0.5rem 0rem 0.8rem;
}
@media (orientation: portrait) {
	.cover {
		justify-content: center;
	}
}
@media (min-width: 670px) {
	.apptitle {
		font-size: 7em;
	}
	.appdesc {
		font-size: 2em;
	}
	.applogo {
		margin-left: -0.1em;
		margin-top: -0.65em;
	}
	.applogo img {
		width: unset;
	}
}

@media (min-width: 820px) {
	.cover {
		justify-content: center;
	}
}

